[gd_scene load_steps=16 format=3 uid="uid://d2r53ymdwlqqx"]

[ext_resource type="Script" path="res://scripts/final_boss_projectile.gd" id="1_wwmde"]
[ext_resource type="Texture2D" uid="uid://btdwfgqjl7tn4" path="res://sprites/New Art/DungeonCrawlerPack/effects (new)/slash_effect_anim_spritesheet.png" id="2_1dw2a"]
[ext_resource type="Texture2D" uid="uid://bsw80ha5xie5l" path="res://sprites/New Art/Monster_Creatures_Fantasy/Skeleton/Sword_sprite.png" id="2_08w7o"]
[ext_resource type="PackedScene" uid="uid://dd1s28kbfnt7j" path="res://scenes/sfx.tscn" id="4_g0t7n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_alvx8"]
atlas = ExtResource("2_1dw2a")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8tet"]
atlas = ExtResource("2_1dw2a")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltj6a"]
atlas = ExtResource("2_1dw2a")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd7wn"]
atlas = ExtResource("2_08w7o")
region = Rect2(276, 0, 92, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv085"]
atlas = ExtResource("2_08w7o")
region = Rect2(368, 0, 92, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrpwa"]
atlas = ExtResource("2_08w7o")
region = Rect2(460, 0, 92, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlgvw"]
atlas = ExtResource("2_08w7o")
region = Rect2(552, 0, 92, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_iygf0"]
atlas = ExtResource("2_08w7o")
region = Rect2(644, 0, 92, 102)

[sub_resource type="SpriteFrames" id="SpriteFrames_clblw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alvx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8tet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltj6a")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd7wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv085")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlgvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iygf0")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_y15pm"]
script/source = "extends Area2D

var damage = global.final_boss_projectile
"

[sub_resource type="CircleShape2D" id="CircleShape2D_rtphx"]
radius = 8.0

[node name="final_boss_projectile" type="Node2D"]
position = Vector2(62, 43)
scale = Vector2(1.25, 1.25)
script = ExtResource("1_wwmde")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_clblw")
animation = &"explode"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="AttackHitboxArea" type="Area2D" parent="."]
visible = false
position = Vector2(38, -16)
collision_layer = 8
collision_mask = 2
monitoring = false
script = SubResource("GDScript_y15pm")

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitboxArea"]
position = Vector2(-42, 16)
shape = SubResource("CircleShape2D_rtphx")

[node name="ImpactDetector" type="Area2D" parent="."]
visible = false
position = Vector2(-10, -4)
collision_layer = 0
collision_mask = 3

[node name="ImpactCollision" type="CollisionShape2D" parent="ImpactDetector"]
position = Vector2(6, 4)
shape = SubResource("CircleShape2D_rtphx")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="sfx" parent="." instance=ExtResource("4_g0t7n")]

[connection signal="area_entered" from="ImpactDetector" to="." method="_on_impact_detector_area_entered"]
[connection signal="body_entered" from="ImpactDetector" to="." method="_on_impact_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
